Finished memory injection